2015-07-09  Peter Stephenson  <p.stephenson@samsung.com>

	* 35751: Src/exec.c, Test/C03traps.ztst: fix ERR_RETURN /
	ERR_EXIT in else branch of if.

2015-07-09  Mikael Magnusson  <mikachu@gmail.com>

	* 35745: Src/utils.c, Test/V09datetime.ztst: ztrftime: Pass
	everything unhandled to the system strftime()

	* unposted: (c.f. Jun T: 35754): Test/V09datetime.ztst: Make
	V09 set a known timezone

2015-07-09  Oliver Kiddle  <opk@zsh.org>

	* 35748: Completion/Zsh/Type/_ps1234,
	Completion/Zsh/Command/_print: fixes to prompt spec completion
	where it contains date formats

	* 35749: (c.f. Jun T: 35732): Completion/Unix/Type/_date_formats:
	fix exclusion list for flags/modifiers

2015-07-08  Oliver Kiddle  <opk@zsh.org>

	* 35729: Completion/Zsh/Command/_compadd: new compadd completion

	* Matthew Martin: 35727: Completion/Unix/Type/_diff_options:
	support OpenBSD for diff options

2015-07-07  Oliver Kiddle  <opk@zsh.org>

	* 35700: Completion/Unix/Type/_date_formats: complete OS specific
	date format specifiers and put % in a prefix

	* 35718: Completion/Unix/Command/_find, Completion/Unix/Type/_dates,
	Completion/Zsh/Type/_globquals: new calendar style date completion

2015-07-07  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/Zle/complete.c: remove compiler warning.

2015-07-06  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/expn.yo: alphabetize ${(b)...} flag

	* 35709: Doc/Zsh/expn.yo: explain :s/// modifier contexts

	* 35694: Src/subst.c, Test/D04parameter.ztst: fix handling of
	history modifiers (specifically :s/l/r/) when applied across all
	elements of an array parameter value

2015-07-06  Oliver Kiddle  <opk@zsh.org>

	* 35704: Doc/Zsh/compwid.yo, Src/Zle/compcore.c, Src/Zle/complete.c:
	compadd -E 0 should imply -J and -2

2015-07-06  Mikael Magnusson  <mikachu@gmail.com>

	* 35696: Completion/Unix/Type/_ps1234: complete colors for %F{
	and %K{

	* 35697: Completion/Unix/Type/_date_formats,